--- a/html/index.html
+++ b/html/index.html
@@ -499,7 +499,7 @@
                     <div class="row">
                         <div class="col-lg-8">
                             <h3>
-                                Join by our growning <span>Newsletter</span> subscriber base
+                                Join by our growing <span>Newsletter</span> subscriber base
                             </h3>
                             <p>
                                 You will be kept up to date of any general news as well as receive a monthly update of results loaded, 
